--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "daisyui": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "theme-change": "^2.0.2"
   },
   "devDependencies": {
